@@ -4,3 +4,4 @@ add_subdirectory(p3)
 add_subdirectory(p4)
 add_subdirectory(p5)
 add_subdirectory(p6)
+add_subdirectory(p7)
